Candidate+User+TestResult entity/controller/facade/service/repo/param/mapper/dto changes Answer creation through question fix CANDIDATE role add New methods for candidate